# GeoSolverCPP

./: CMakeLists.txt  Utils.cpp  Utils.h  main.cpp
proposition/: Proposition.cpp  Proposition.h
proposition/equalityPivot/: DefinedPivot.cpp  DefinedPivot.h  EqualityPivot.cpp  EqualityPivot.h  ImmutablePivot.cpp  ImmutablePivot.h  MutablePivot.cpp  MutablePivot.h
structure/: DefinedEntity.cpp  DefinedEntity.h  Entity.cpp  Entity.h  Immutable.cpp  Immutable.h  Mutable.cpp  Mutable.h
structure/unicardinal/: Unicardinal.cpp  Unicardinal.h
